--- a/src/components/Content/TaskHierarchy/TaskHierarchy.css
+++ b/src/components/Content/TaskHierarchy/TaskHierarchy.css
@@ -31,7 +31,7 @@
 }
 
 .label-due-date {
-  width: 96px;
+  width: 106px;
   padding: 0 4px;
 }
 
